<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_me"
            android:contentDescription="@string/my_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:text="@string/my_name"
                style="@style/Main_Title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/job_title"
                style="@style/Secondary_Title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/location"
                style="@style/Secondary_Title" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/black"
        android:overScrollMode="always">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_about"
                style="@style/Section_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="About Me" />

            <TextView
                android:id="@+id/text_view_about_content"
                style="@style/Section_Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_content" />

            <View style="@style/Divider" />

            <TextView
                android:id="@+id/text_view_educationt"
                style="@style/Section_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Education" />

            <TextView
                android:id="@+id/text_view_education_content"
                style="@style/Section_Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education_content" />

            <View style="@style/Divider" />

            <TextView
                android:id="@+id/text_view_skills"
                style="@style/Section_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Skills" />

            <TextView
                android:id="@+id/text_view_skills_content"
                style="@style/Section_Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skills_content" />

            <View style="@style/Divider" />

            <TextView
                android:id="@+id/text_view_hobbies"
                style="@style/Section_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Interests" />

            <TextView
                android:id="@+id/text_view_hobbies_content"
                style="@style/Section_Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hobbies_content" />

            <View style="@style/Divider" />

            <TextView
                android:id="@+id/text_view_contacts"
                style="@style/Section_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact Me" />

            <TextView
                android:id="@+id/text_view_contacts_content"
                style="@style/Section_Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts_content" />
        </LinearLayout>


    </ScrollView>


</LinearLayout>